--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
@@ -47,6 +47,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "## Aptitudes en Data Science\n",
+    "**Lo más importante** \n",
+    "* Matemáticas\n",
+    "* Python\n",
+    "* SQL  \n",
+    "<img src=\"./img/python.png\">  \n",
+    "\n",
+    " Otro tema muy importante es la **estadística**  \n",
+    "\n",
+    " Si tienes dudas, puedes escribirnos a: ta_ds_online@thebridheschool.es  \n",
+    "\n",
+    "Y en esta web se aprende mucho sobre *Machine learning*: [Kaggle](https://kaggle.com/)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -74,6 +100,24 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align:center\"><img src=\"./img/md_ejercicio_2.png\" /></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "| **Fundamentals** | **Data Analysis** | **Machine Learning** | **Data & Business** |\n",
+    "|---|---|---|:---|\n",
+    "| Jupyter | SQL | Supervisado | API |\n",
+    "| GitHub | Estadística | No supervisado | Despliegue |\n",
+    "| Python | EDA | Deep Learning | Cloud Computing |\n",
+    "\n",
+    "\n",
+    "$\\sqrt{3x-1}+(1+x)^2$"
    ]
   }
  ],
