--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
@@ -63,9 +63,10 @@
     "\n",
     " Otro tema muy importante es la **estadística**  \n",
     "\n",
-    " Si tienes dudas, puedes escribirnos a: ta_ds_online@thebridheschool.es  \n",
+    " Si tienes dudas, puedes escribirnos a: <span style=\"color: blue;\">ta_ds_online@thebridheschool.es</span>\n",
     "\n",
-    "Y en esta web se aprende mucho sobre *Machine learning*: [Kaggle](https://kaggle.com/)\n",
+    "\n",
+    "Y en esta web se aprende mucho sobre *Machine learning*: [**Kaggle**](https://kaggle.com/)\n",
     "\n",
     "\n",
     "\n",
@@ -117,7 +118,8 @@
     "| Python | EDA | Deep Learning | Cloud Computing |\n",
     "\n",
     "\n",
-    "$\\sqrt{3x-1}+(1+x)^2$"
+    "$\\sqrt{3x-1}+(1+x)^2$\n",
+    "\n"
    ]
   }
  ],
