--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
@@ -56,16 +56,16 @@
    "source": [
     "## Aptitudes en Data Science\n",
     ">**Lo más importante** \n",
-    "* Matemáticas\n",
-    "* Python\n",
-    "* SQL  \n",
-    "<img src=\"./img/python.png\">  \n",
-    "\n",
-    " >Otro tema muy importante es la ***Estadística***.\n",
-    "\n",
-    " >Si tienes dudas, puedes escribirnos a: <span style=\"color: blue;\">ta_ds_online@thebridheschool.es</span>\n",
-    "\n",
-    " >Y en esta web se aprende mucho sobre *Machine learning*: [**Kaggle**](https://kaggle.com/)\n",
+    "    >* Matemáticas\n",
+    "    >* Python\n",
+    "    >* SQL  \n",
+    "<img src=\"./img/python.png\">      \n",
+    ">\n",
+    ">Otro tema muy importante es la ***Estadística***.  \n",
+    ">\n",
+    ">Si tienes dudas, puedes escribirnos a: <span style=\"color: blue;\">ta_ds_online@thebridheschool.es</span>  \n",
+    ">\n",
+    ">Y en esta web se aprende mucho sobre *Machine learning*: [**Kaggle**](https://kaggle.com/)\n",
     "\n",
     "\n",
     "\n",
