--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
@@ -59,7 +59,7 @@
     "    >* Matemáticas\n",
     "    >* Python\n",
     "    >* SQL  \n",
-    "<img src=\"./img/python.png\">      \n",
+    "><img src=\"./img/python.png\">      \n",
     ">\n",
     ">Otro tema muy importante es la ***Estadística***.  \n",
     ">\n",
