--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/03_Practica_Obligatoria/18_Practica_Obligatoria_Markdown.ipynb
@@ -120,7 +120,7 @@
     "| Python | EDA | Deep Learning | Cloud Computing |\n",
     "\n",
     "\n",
-    "$\\sqrt{3x-1}+(1+x)^2$\n",
+    "$$\\sqrt{3x-1}+(1+x)^2$$\n",
     "\n"
    ]
   }
